--- a/Musei/src/pages/home/home.html
+++ b/Musei/src/pages/home/home.html
@@ -3,7 +3,7 @@
     <ion-row class="rowHome">
         <ion-col class="colHome">
 			<ion-card class="cardHome" style="background-color: yellow">
-    			<div class="card-title">Archeologia</div>
+    			<div class="card-title">Che scarica</div>
   		  	</ion-card>
 	    </ion-col>
 		<ion-col class="colHome">
