--- a/Musei/src/pages/home/home.html
+++ b/Musei/src/pages/home/home.html
@@ -8,7 +8,7 @@
 	    </ion-col>
 		<ion-col class="colHome">
 			<ion-card class="cardHome" style="background-color: red">
-    			<div class="card-title">Arte antica</div>
+    			<div class="card-title">si vola</div>
   		  	</ion-card>
 		</ion-col>
 	</ion-row>
