Aggiunta pagina secondo step musei

--- a/Musei/src/pages/home/home.html
+++ b/Musei/src/pages/home/home.html
@@ -2,7 +2,7 @@
   <ion-grid class="gridHome">
     <ion-row class="rowHome">
         <ion-col class="colHome">
-			<ion-card class="cardHome" style="background-color: yellow">
+			<ion-card class="cardHome" (click)="goAnotherPage()" style="background-color: yellow">
     			<div class="card-title">Che scarica</div>
   		  	</ion-card>
 	    </ion-col>
