Cambio label archeologia e arte antica

--- a/Musei/src/pages/home/home.html
+++ b/Musei/src/pages/home/home.html
@@ -3,12 +3,12 @@
     <ion-row class="rowHome">
         <ion-col class="colHome">
 			<ion-card class="cardHome" (click)="goAnotherPage()" style="background-color: yellow">
-    			<div class="card-title">Che scarica</div>
+    			<div class="card-title">Archeologia</div>
   		  	</ion-card>
 	    </ion-col>
 		<ion-col class="colHome">
 			<ion-card class="cardHome" style="background-color: red">
-    			<div class="card-title">si vola</div>
+    			<div class="card-title">Arte antica</div>
   		  	</ion-card>
 		</ion-col>
 	</ion-row>
