--- a/Musei/src/pages/musei/musei.html
+++ b/Musei/src/pages/musei/musei.html
@@ -1,18 +1,32 @@
-<!--
-  Generated template for the MuseiPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
-
-  <ion-navbar>
-    <ion-title>Musei</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
-<ion-content padding>
-
+<ion-content class="card-background-page">
+  <ion-grid class="gridHome">
+    <ion-row class="rowHome">
+        <ion-col class="colHome">
+			<ion-card class="cardHome" style="background-color: yellow">
+    			<div class="card-title">Museo Civico Medievale</div>
+  		  	</ion-card>
+	    </ion-col>
+	</ion-row>
+    <ion-row class="rowHome">
+        <ion-col class="colHome">
+			<ion-card class="cardHome" style="background-color: blue">
+    			<div class="card-title">Museo Civico d'Arte Industriale e Galleria Davia Bargellini</div>
+  		  	</ion-card>
+	    </ion-col>
+	</ion-row>
+    <ion-row class="rowHome">
+        <ion-col class="colHome">
+			<ion-card class="cardHome" style="background-color: red">
+    			<div class="card-title">Collezioni Comunali d'Arte</div>
+  		  	</ion-card>
+	    </ion-col>
+	</ion-row>
+    <ion-row class="rowHome">
+        <ion-col class="colHome">
+			<ion-card class="cardHome" style="background-color: green">
+    			<div class="card-title">Museo del Tessuto e della Tappezzeria "Vittorio Zironi"</div>
+  		  	</ion-card>
+	    </ion-col>
+	</ion-row>
+  </ion-grid>
 </ion-content>
