Cambio firma metodo goMuseiPage

--- a/Musei/src/pages/home/home.html
+++ b/Musei/src/pages/home/home.html
@@ -7,7 +7,7 @@
   		  	</ion-card>
 	    </ion-col>
 		<ion-col class="colHome">
-			<ion-card class="cardHome" (click)="goAnotherPage()" style="background-color: red">
+			<ion-card class="cardHome" (click)="goMuseiPage()" style="background-color: red">
     			<div class="card-title">Arte antica</div>
   		  	</ion-card>
 		</ion-col>
