--- a/Musei/src/pages/museo/museo.html
+++ b/Musei/src/pages/museo/museo.html
@@ -3,6 +3,9 @@
 		<button class="sideMenu" ion-button menuToggle (click)="openMenu()">
 			<ion-icon name="menu"></ion-icon>
 		</button>
+		<button class="home-button" ion-button icon-only (click)="goHomePage()">
+			<ion-icon name="home"></ion-icon>
+		</button>
     	<div class="card-title">{{museo[0].NOME}}</div>
   	</ion-card>
 </ion-content>
