Layout immagini home

--- a/Musei/src/pages/home/home.html
+++ b/Musei/src/pages/home/home.html
@@ -2,37 +2,49 @@
   <ion-grid class="gridHome">
     <ion-row class="rowHome">
         <ion-col class="colHome">
-			<ion-card class="cardHome" style="background-color: SaddleBrown">
+			<ion-card id="card-archeologia" class="cardHome" style="background-color: SaddleBrown">
+        <div class="card-gradient">
     			<div class="card-title">Archeologia</div>
-  		  	</ion-card>
+        </div>
+  		 </ion-card>
 	    </ion-col>
 		<ion-col class="colHome">
-			<ion-card class="cardHome" (click)="goMuseiPage()" style="background-color: red">
+			<ion-card id="card-arteantica" class="cardHome" (click)="goMuseiPage()" style="background-color: red">
+        <div class="card-gradient">
     			<div class="card-title">Arte antica</div>
+        </div>
   		  	</ion-card>
 		</ion-col>
 	</ion-row>
     <ion-row class="rowHome">
         <ion-col class="colHome">
-			<ion-card class="cardHome" style="background-color: Violet">
+			<ion-card id="card-artemoderna" class="cardHome" style="background-color: Violet">
+        <div class="card-gradient">
     			<div class="card-title">Arte moderna e contemporanea</div>
+        </div>
   		  	</ion-card>
 	    </ion-col>
 		<ion-col class="colHome">
-  	  		<ion-card class="cardHome" style="background-color: RebeccaPurple">
-    			<div class="card-title">Musica</div>
+  	  		<ion-card id="card-musica" class="cardHome" style="background-color: RebeccaPurple">
+            <div class="card-gradient">
+    			    <div class="card-title">Musica</div>
+            </div>
   		  	</ion-card>
 		</ion-col>
 	</ion-row>
     <ion-row class="rowHome">
         <ion-col class="colHome">
-			<ion-card class="cardHome" style="background-color: RoyalBlue">
+			<ion-card id="card-patrimonioindustriale" class="cardHome" style="background-color: RoyalBlue">
+        <div class="card-gradient">
     			<div class="card-title">Patrimonio industriale e Cultura tecnica</div>
+        </div>
   		  	</ion-card>
 	    </ion-col>
 		<ion-col class="colHome">
-  	  		<ion-card class="cardHome" style="background-color: SeaGreen">
-    			<div class="card-title">Storia e Memoria</div>
+  	  		<ion-card id="card-storiaememoria" class="cardHome" style="background-color: SeaGreen">
+            <div class="card-gradient">
+    			       <div class="card-title">Storia e Memoria</div>
+            </div>
   		  	</ion-card>
 		</ion-col>
 	</ion-row>
