Sistemato layout home museo
Sistemato layout home museo e caricata immagine museo musica home.

Ora coalcolo l'altezza del DIV con id "descrizione" appena si carica la pagina per allineare il lato inferiore al div padre (il testo scorrevole è in linea con la barra laterale sinistra).

--- a/Musei/src/pages/museo/museo.html
+++ b/Musei/src/pages/museo/museo.html
@@ -6,10 +6,9 @@
 		<button class="home-button"ion-button icon-only (click)="goHomePage()">
 			<ion-icon name="home"></ion-icon>
 		</button>
-    	<div class="card-title">{{museo[0].NOME}}
-				<div class="museo-content">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    	<div class="card-title" id="museo_cardTitle">{{museo[0].NOME}}
+				<div class="museo-content" id="descrizione">
+
 				</div>
 			</div>
   	</ion-card>
