Aggiunta Pagina Orari

--- a/Musei/src/pages/menu-Museo/orari/orari.html
+++ b/Musei/src/pages/menu-Museo/orari/orari.html
@@ -1,18 +1,23 @@
-<!--
-  Generated template for the OrariPage page.
+<ion-content id="paginaContent" class="card-background-page">
+	<ion-card class="headerContent">
+		<button class="sideMenu" ion-button menuToggle (click)="openMenu()">
+			<ion-icon name="menu"></ion-icon>
+		</button>
+		<button class="vocal-button" id="mic" ion-button icon-only (click)="read()">
+			<ion-icon name="mic"></ion-icon>
+		</button>
+		<button class="vocal-button" id="disabled-mic" style="display:none" ion-button icon-only (click)="stopRead()">
+			<ion-icon name="mic-off"></ion-icon>
+		</button>
+		<button class="home-button" ion-button icon-only (click)="goHomePage()">
+			<ion-icon name="home"></ion-icon>
+		</button>
+    <div class="card-title" id="content_cardTitle">
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
-
-  <ion-navbar>
-    <ion-title>orari</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
-<ion-content padding>
-
+		</div>
+  </ion-card>
+  <ion-card>
+    <div class="content-content" id="contenuto">
+    </div>
+  </ion-card>
 </ion-content>
