Creata pagina per menu museo e collegamenti

--- a/Musei/src/pages/mm-informazioni/mm-informazioni.html
+++ b/Musei/src/pages/mm-informazioni/mm-informazioni.html
@@ -1,6 +1,6 @@
 <ion-content id="paginaMmInformazioni" class="card-background-page">
 	<ion-card id="content-header" class="headerContent">
-		<button class="sideMenu" ion-button menuToggle (click)="openMenu()">
+		<button class="sideMenu" ion-button (click)="openMenu()">
 			<ion-icon name="menu"></ion-icon>
 		</button>
 		<button class="vocal-button" id="mic" ion-button icon-only (click)="read()">
@@ -24,3 +24,5 @@
     </div>
   </ion-card>
 </ion-content>
+  
+  
