--- a/Musei/src/pages/museo/museo.html
+++ b/Musei/src/pages/museo/museo.html
@@ -1,6 +1,6 @@
 <ion-content id="paginaMuseo" class="card-background-page">
 	<ion-card class="cardHome" style="background-color: yellow">
-		<button class="sideMenu" ion-button menuToggle (click)="openMenu()">
+		<button class="sideMenu" ion-button (click)="openMenu()">
 			<ion-icon name="menu"></ion-icon>
 		</button>
 		<button class="vocal-button" id="mic" ion-button icon-only (click)="read()">
