--- a/Musei/src/pages/menu/menu.html
+++ b/Musei/src/pages/menu/menu.html
@@ -58,5 +58,9 @@
             <ion-icon name="git-compare" item-left></ion-icon>
             Percorsi Trasversali
         </button>
+        <button ion-item (click)="onLoad('ContattiService', 'true')">
+          <ion-icon name="contacts" item-left></ion-icon>
+          Contatti
+      </button>
     </ion-list>
 </ion-content>
