Pagina Sale Espositive

--- a/Musei/src/pages/menu/menu.html
+++ b/Musei/src/pages/menu/menu.html
@@ -30,6 +30,10 @@
             <ion-icon name="book" item-left></ion-icon>
             La Biblioteca
         </button>
+        <button ion-item (click)="onLoad('SaleEspositiveService', 'true')">
+          <ion-icon name="contacts" item-left></ion-icon>
+          Sale Espositive
+      </button>
         <button ion-item (click)="onLoad('InformazioniService', 'true')">
             <ion-icon name="information-circle" item-left></ion-icon>
             Informazioni
