Percorsi a tema inizio

--- a/Musei/src/pages/menu/menu.html
+++ b/Musei/src/pages/menu/menu.html
@@ -34,6 +34,10 @@
           <ion-icon name="contacts" item-left></ion-icon>
           Sale Espositive
       </button>
+      <button ion-item (click)="onLoad('PercorsiATemaService', 'true')">
+            <ion-icon name="git-compare" item-left></ion-icon>
+            Percorsi A Tema
+        </button>
         <button ion-item (click)="onLoad('InformazioniService', 'true')">
             <ion-icon name="information-circle" item-left></ion-icon>
             Informazioni
