Barra Home page per mostrare side menu

--- a/Musei/src/pages/home/home.html
+++ b/Musei/src/pages/home/home.html
@@ -20,7 +20,10 @@
         <ion-col class="colHome">
 			<ion-card id="card-artemoderna" class="cardHome" (click)="findMusei('Arte moderna e contemporanea', false)" style="background-color: Violet">
         <div class="card-gradient">
-    			<div class="card-title">Arte moderna e contemporanea</div>
+				<div id="open-menu"></div>
+    			<div class="card-title">
+					Arte moderna e contemporanea
+				</div>
         </div>
   		  	</ion-card>
 	    </ion-col>
