Caratteri responsive (prima parte)

--- a/Musei/src/pages/menu/menu.html
+++ b/Musei/src/pages/menu/menu.html
@@ -1,72 +1,72 @@
-<ion-header>
-<ion-toolbar>
-    <ion-title>MENU</ion-title>
+<ion-header class="size-button">
+<ion-toolbar class="size-button">
+    <ion-title class="size-button">MENU</ion-title>
     <ion-buttons end>
-        <button ion-button icon-only (click)="return()">
-            <ion-icon name="arrow-forward" class="toolbar-title"></ion-icon>
+        <button class="size-button" ion-button icon-only (click)="return()">
+            <ion-icon class="size-button" name="arrow-forward" class="toolbar-title"></ion-icon>
         </button>
     </ion-buttons>
 </ion-toolbar>
 </ion-header>
 <ion-content>
     <ion-list>
-        <button ion-item (click)="onLoad('LoginService', 'true')">
+        <button class="size-button" ion-item (click)="onLoad('LoginService', 'true')">
             <ion-icon name="contact" item-left></ion-icon>
             Login
         </button>
-        <button ion-item (click)="onLoad('MuseoService', 'true')">
+        <button class="size-button" ion-item (click)="onLoad('MuseoService', 'true')">
             <ion-icon name="archive" item-left></ion-icon>
             Il Museo
         </button>
-        <button ion-item (click)="onLoad('PalazzoService', 'true')">
+        <button class="size-button" ion-item (click)="onLoad('PalazzoService', 'true')">
             <ion-icon name="construct" item-left></ion-icon>
             Il Palazzo
         </button>
-        <button ion-item (click)="onLoad('CollezioniService', 'true')">
+        <button class="size-button" ion-item (click)="onLoad('CollezioniService', 'true')">
             <ion-icon name="images" item-left></ion-icon>
             Le Collezioni
         </button>
-        <button ion-item (click)="onLoad('BibliotecaService', 'true')">
+        <button class="size-button" ion-item (click)="onLoad('BibliotecaService', 'true')">
             <ion-icon name="book" item-left></ion-icon>
             La Biblioteca
         </button>
-        <button ion-item (click)="onLoad('SaleEspositiveService', 'true')">
+        <button class="size-button" ion-item (click)="onLoad('SaleEspositiveService', 'true')">
           <ion-icon name="contacts" item-left></ion-icon>
           Sale Espositive
       </button>
-      <button ion-item (click)="onLoad('PercorsiATemaService', 'true')">
+      <button class="size-button" ion-item (click)="onLoad('PercorsiATemaService', 'true')">
             <ion-icon name="git-compare" item-left></ion-icon>
             Percorsi A Tema
         </button>
-        <button ion-item (click)="onLoad('InformazioniService', 'true')">
+        <button class="size-button" ion-item (click)="onLoad('InformazioniService', 'true')">
             <ion-icon name="information-circle" item-left></ion-icon>
             Informazioni
         </button>
-        <button ion-item (click)="onLoad('IndicazioniService', 'true')">
+        <button class="size-button" ion-item (click)="onLoad('IndicazioniService', 'true')">
             <ion-icon name="pin" item-left></ion-icon>
             Come raggiungerci
         </button>
-        <button ion-item (click)="onLoad('OrariService', 'true')">
+        <button class="size-button" ion-item (click)="onLoad('OrariService', 'true')">
             <ion-icon name="alarm" item-left></ion-icon>
             Orari
         </button>
-        <button ion-item (click)="onLoad('BigliettiService', 'true')">
+        <button class="size-button" ion-item (click)="onLoad('BigliettiService', 'true')">
             <ion-icon name="paper" item-left></ion-icon>
             Biglietti
         </button>
-        <button ion-item (click)="onLoad('EventiService', 'true')">
+        <button class="size-button" ion-item (click)="onLoad('EventiService', 'true')">
             <ion-icon name="paper-plane" item-left></ion-icon>
             Eventi
         </button>
-        <button ion-item (click)="onLoad('SocialService', 'true')">
+        <button class="size-button" ion-item (click)="onLoad('SocialService', 'true')">
             <ion-icon name="logo-facebook" item-left></ion-icon>
             Condivisione Social
         </button>
-        <button ion-item (click)="onLoad(PercorsiService, 'true')">
+        <button class="size-button" ion-item (click)="onLoad(PercorsiService, 'true')">
             <ion-icon name="git-compare" item-left></ion-icon>
             Percorsi Trasversali
         </button>
-        <button ion-item (click)="onLoad('ContattiService', 'true')">
+        <button class="size-button" ion-item (click)="onLoad('ContattiService', 'true')">
           <ion-icon name="contacts" item-left></ion-icon>
           Contatti
       </button>
