--- a/Musei/src/pages/museo/museo.html
+++ b/Musei/src/pages/museo/museo.html
@@ -1,19 +1,19 @@
 <ion-content id="paginaMuseo" class="card-background-page">
 	<ion-card class="cardHome" style="background-color: yellow">
 		<button class="sideMenu" ion-button (click)="openMenu()">
-			<ion-icon name="menu"></ion-icon>
+			<ion-icon name="menu" id="menu"></ion-icon>
 		</button>
 		<button class="vocal-button" id="mic" ion-button icon-only (click)="read()">
-			<ion-icon name="mic"></ion-icon>
+			<ion-icon name="mic" id="vocal"></ion-icon>
 		</button>
 		<button class="vocal-button" id="disabled-mic" style="display:none" ion-button icon-only (click)="stopRead()">
-			<ion-icon name="mic-off"></ion-icon>
+			<ion-icon name="mic-off" id="vocal-off"></ion-icon>
 		</button>
 		<button class="home-button" ion-button icon-only (click)="goHomePage()">
-			<ion-icon name="home"></ion-icon>
+			<ion-icon name="home" id="home-icon"></ion-icon>
 		</button>
     	<div class="card-title" id="museo_cardTitle">{{museo[0].NOME}}
-				<div class="museo-content" id="descrizione">
+			<div class="museo-content" id="descrizione">
 				</div>
 			</div>
   	</ion-card>
