Caratteri responsive (seconda parte)

--- a/Musei/src/pages/home/home.html
+++ b/Musei/src/pages/home/home.html
@@ -21,9 +21,7 @@
 			<ion-card id="card-artemoderna" class="cardHome" (click)="findMusei('Arte moderna e contemporanea', false)" style="background-color: Violet">
         <div class="card-gradient">
 				<div id="open-menu"></div>
-    			<div class="card-title">
-					Arte moderna e contemporanea
-				</div>
+    			<div class="card-title">Arte moderna e contemporanea</div>
         </div>
   		  	</ion-card>
 	    </ion-col>
