--- a/Musei/src/pages/menu/menu.html
+++ b/Musei/src/pages/menu/menu.html
@@ -16,23 +16,23 @@
         </button>
         <button class="size-button" ion-item (click)="onLoad('MuseoService', 'true')">
             <ion-icon name="archive" item-left></ion-icon>
-            Il Museo
+            Museo
         </button>
         <button class="size-button" ion-item (click)="onLoad('PalazzoService', 'true')">
             <ion-icon name="construct" item-left></ion-icon>
-            Il Palazzo
+            Palazzo
         </button>
         <button class="size-button" ion-item (click)="onLoad('CollezioniService', 'true')">
             <ion-icon name="images" item-left></ion-icon>
-            Le Collezioni
+            Collezioni
         </button>
         <button class="size-button" ion-item (click)="onLoad('BibliotecaService', 'true')">
             <ion-icon name="book" item-left></ion-icon>
-            La Biblioteca
+            Biblioteca
         </button>
         <button class="size-button" ion-item (click)="onLoad('SaleEspositiveService', 'true')">
-          <ion-icon name="contacts" item-left></ion-icon>
-          Sale Espositive
+          <ion-icon name="clipboard" item-left></ion-icon>
+            Sale Espositive
       </button>
       <button class="size-button" ion-item (click)="onLoad('PercorsiATemaService', 'true')">
             <ion-icon name="git-compare" item-left></ion-icon>
@@ -68,7 +68,7 @@
         </button>
         <button class="size-button" ion-item (click)="onLoad('ContattiService', 'true')">
           <ion-icon name="contacts" item-left></ion-icon>
-          Contatti
+            Contatti
       </button>
     </ion-list>
 </ion-content>
