--- a/Musei/src/pages/musei/musei.html
+++ b/Musei/src/pages/musei/musei.html
@@ -2,7 +2,7 @@
   <ion-grid class="gridHome">
     <ion-row id="row-1" class="rowHome">
         <ion-col class="colHomeYellow">
-			<button class="back-musei" ion-button icon-only (click)="goHomePage()"><ion-icon name="arrow-back"></ion-icon></button>
+			<button class="back-musei" ion-button icon-only (click)="goHomePage()"><ion-icon name="arrow-back" id="arrow"></ion-icon></button>
 			<ion-card class="cardHome" (click)="findMuseo(musei[0].NOME)">
     			<div class="card-title">{{musei[0].NOME}}</div>
   		  	</ion-card>
