--- a/Musei/src/pages/mp-contatti/mp-contatti.html
+++ b/Musei/src/pages/mp-contatti/mp-contatti.html
@@ -1,13 +1,13 @@
 <ion-content id="paginaMpContatti" class="card-background-page">
   <ion-card id="content-header" class="headerContent">
     <button class="vocal-button" id="mic" ion-button icon-only (click)="read()">
-      <ion-icon name="mic"></ion-icon>
+      <ion-icon name="mic" id="vocal"></ion-icon>
     </button>
     <button class="vocal-button" id="disabled-mic" style="display:none" ion-button icon-only (click)="stopRead()">
-      <ion-icon name="mic-off"></ion-icon>
+      <ion-icon name="mic-off" id="vocal-off"></ion-icon>
     </button>
     <button class="home-button" ion-button icon-only (click)="goHomePage()">
-      <ion-icon name="home"></ion-icon>
+      <ion-icon name="home" id="home-icon"></ion-icon>
     </button>
     <div class="card-head">
       <div class="card-title" id="content_cardTitle"></div>
