Aggiunte Animazioni Pagine

--- a/Musei/src/pages/mm-condivisione-social/mm-condivisione-social.html
+++ b/Musei/src/pages/mm-condivisione-social/mm-condivisione-social.html
@@ -13,12 +13,12 @@
       <ion-icon name="home" id="home-icon"></ion-icon>
     </button>
     <div class="card-head">
-      <div class="card-title" id="content_cardTitle"></div>
-      <div class="card-subtitle" id="content_cardSubTitle"></div>
+      <div class="card-title animated fadeInLeft" id="content_cardTitle"></div>
+      <div class="card-subtitle animated fadeInRight" id="content_cardSubTitle"></div>
     </div>
   </ion-card>
   <ion-card id="card-contenuto" class="container-content">
-    <div id="container-contenuto" class="container">
+    <div id="container-contenuto" class="container animated fadeInUp">
       Seleziona l'app che preferisci per condividere la tua esperienza al museo:
       <br>
       <br>
