--- a/Musei/src/pages/mp-contatti/mp-contatti.html
+++ b/Musei/src/pages/mp-contatti/mp-contatti.html
@@ -10,13 +10,13 @@
       <ion-icon name="home"></ion-icon>
     </button>
     <div class="card-head">
-      <div class="card-title" id="content_cardTitle"></div>
-      <div class="card-subtitle" id="content_cardSubTitle"></div>
+      <div class="card-title animated fadeInLeft" id="content_cardTitle"></div>
+      <div class="card-subtitle animated fadeInRight" id="content_cardSubTitle"></div>
     </div>
   </ion-card>
   <ion-card id="card-contenuto" class="container-content">
     <div id="container-contenuto">
-      <div id="contenuto" class="content-content">
+      <div id="contenuto" class="content-content animated fadeInUp">
       </div>
     </div>
   </ion-card>
