--- a/Musei/src/pages/home/home.html
+++ b/Musei/src/pages/home/home.html
@@ -4,14 +4,14 @@
         <ion-col class="colHome">
 			<ion-card id="card-archeologia" class="cardHome" (click)="findMusei('Archeologia', false)" style="background-color: SaddleBrown">
         <div class="card-gradient">
-    			<div class="card-title">Archeologia</div>
+    			<div class="card-title animated fadeInLeft">Archeologia</div>
         </div>
   		 </ion-card>
 	    </ion-col>
 		<ion-col class="colHome">
 			<ion-card id="card-arteantica" class="cardHome" (click)="findMusei('Arte antica', false)" style="background-color: red">
         <div class="card-gradient">
-    			<div class="card-title">Arte antica</div>
+    			<div class="card-title animated fadeInLeft">Arte antica</div>
         </div>
   		  	</ion-card>
 		</ion-col>
@@ -21,7 +21,7 @@
 			<ion-card id="card-artemoderna" class="cardHome" (click)="findMusei('Arte moderna e contemporanea', false)" style="background-color: Violet">
         <div class="card-gradient">
 				<div id="open-menu"></div>
-    			<div class="card-title">
+    			<div class="card-title animated fadeInLeft">
 					Arte moderna e contemporanea
 				</div>
         </div>
@@ -30,7 +30,7 @@
 		<ion-col class="colHome">
   	  		<ion-card id="card-musica" class="cardHome" (click)="findMusei('Musica', true)" style="background-color: RebeccaPurple">
             <div class="card-gradient">
-    			    <div class="card-title">Musica</div>
+    			    <div class="card-title animated fadeInLeft">Musica</div>
             </div>
   		  	</ion-card>
 		</ion-col>
@@ -39,14 +39,14 @@
         <ion-col class="colHome">
 			<ion-card id="card-patrimonioindustriale" class="cardHome" (click)="findMusei('Patrimonio industriale e cultura tecnica', false)" style="background-color: RoyalBlue">
         <div class="card-gradient">
-    			<div class="card-title">Patrimonio industriale e Cultura tecnica</div>
+    			<div class="card-title animated fadeInLeft">Patrimonio industriale e Cultura tecnica</div>
         </div>
   		  	</ion-card>
 	    </ion-col>
 		<ion-col class="colHome">
   	  		<ion-card id="card-storiaememoria" class="cardHome" (click)="findMusei('Storia e Memoria', false)" style="background-color: SeaGreen">
             <div class="card-gradient">
-    			       <div class="card-title">Storia e Memoria</div>
+    			       <div class="card-title animated fadeInLeft">Storia e Memoria</div>
             </div>
   		  	</ion-card>
 		</ion-col>
