--- a/Musei/src/pages/mm-biglietti/mm-biglietti.html
+++ b/Musei/src/pages/mm-biglietti/mm-biglietti.html
@@ -13,13 +13,13 @@
         <ion-icon name="home" id="home-icon"></ion-icon>
       </button>
       <div class="card-head">
-        <div class="card-title animated fadeInLeft" id="content_cardTitle"></div>
-        <div class="card-subtitle animated fadeInRight" id="content_cardSubTitle"></div>
+        <div class="card-title animated fadeInLeft slow" id="content_cardTitle"></div>
+        <div class="card-subtitle animated fadeInRight slow" id="content_cardSubTitle"></div>
       </div>
     </ion-card>
     <ion-card id="card-contenuto" class="container-content ">
       <div id="container-contenuto">
-        <div id="contenuto" class="content-content animated fadeInUp">
+        <div id="contenuto" class="content-content animated fadeInUp slow">
         </div>
       </div>
     </ion-card>
