--- a/Musei/src/pages/mm-come-raggiungerci/mm-come-raggiungerci.html
+++ b/Musei/src/pages/mm-come-raggiungerci/mm-come-raggiungerci.html
@@ -13,12 +13,12 @@
         <ion-icon name="home" id="home-icon"></ion-icon>
       </button>
       <div class="card-head">
-        <div class="card-title animated fadeInLeft" id="content_cardTitle"></div>
-        <div class="card-subtitle animated fadeInRight" id="content_cardSubTitle"></div>
+        <div class="card-title animated fadeInLeft slow" id="content_cardTitle"></div>
+        <div class="card-subtitle animated fadeInRight slow" id="content_cardSubTitle"></div>
       </div>
     </ion-card>
     <ion-card id="card-contenuto" class="container-content">
-      <div id="container-contenuto" class="container animated fadeInUp">
+      <div id="container-contenuto" class="container animated fadeInUp slow">
         <div id="bottone">
           <button class="portami-class" id="portami-button" ion-button (click)="calcolaPercorso()">
               <ion-icon id="pin" name="pin"></ion-icon>
